--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 httpx~=0.28.1
 pydantic~=2.11.9
 aiosqlite~=0.21.0
+pandas~=2.3.3
+nest-asyncio~=1.6.0
+matplotlib~=3.9.0
+seaborn~=0.13.2
+wordcloud~=1.9.3
